--- a/src/main/resources/static/templates/spring_boot/entity_template.html
+++ b/src/main/resources/static/templates/spring_boot/entity_template.html
@@ -135,7 +135,7 @@
         </tr>
         <tr>
           <th colspan="2">Should this entity be thread safe during update?</th>
-          <td colspan="2"><input id="shouldBeThreadSafe" type="checkbox" style="" /></td>
+          <td colspan="2"><input id="shouldBeThreadSafe" type="checkbox"/></td>
         </tr>
         <tr>
           <td colspan="4">
