--- a/src/main/resources/static/templates/spring_boot/service_template.html
+++ b/src/main/resources/static/templates/spring_boot/service_template.html
@@ -2,6 +2,7 @@
   div#serviceTemplateContainer {
     display: none;
     width: 50%;
+    
   }
 
   table#serviceTemplate {
@@ -63,7 +64,7 @@
 </script>
 
 <div id="serviceTemplateContainer" style="width:100%;">
-  <div style="padding:20px;">
+  <div style="padding:20px; text-align:-webkit-center;">
     <table id="serviceTemplate" style="width:80%;">
       <tbody>
         <tr>
