--- a/src/main/resources/static/templates/spring_boot/entity_template.html
+++ b/src/main/resources/static/templates/spring_boot/entity_template.html
@@ -106,7 +106,7 @@
 
 <div id="entityTemplateContainer">
   <div style="padding:20px;">
-    <table id="entityTemplate" style="width:720px;">
+    <table id="entityTemplate">
       <tbody>
         <tr>
           <td colspan="3" style="width:70%; text-align:left;">
