--- a/src/main/resources/static/templates/template.html
+++ b/src/main/resources/static/templates/template.html
@@ -42,7 +42,7 @@
         <select name="projectTemplate" id="projectTemplate">
             <option disabled selected>Please pick one</option>
             <option value="spring-boot">Spring Boot</option>
-            <option value="spring-boot">Angular</option>
+            <option value="angular">Angular</option>
         </select><br /><br />
 
         *Package Name: <input id="package" type="text" />
