--- a/src/main/resources/static/templates/template.html
+++ b/src/main/resources/static/templates/template.html
@@ -41,7 +41,7 @@
         <label for="projectTemplate">Select a Project Template</label>
         <select name="projectTemplate" id="projectTemplate">
             <option disabled selected>Please pick one</option>
-            <option value="spring-boot">Spring Boot</option>
+            <option value="springBoot">Spring Boot</option>
             <option value="angular">Angular</option>
         </select><br /><br />
 
